--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       <p class="footer__title">© 2024 Around The U.S</p>
     </footer>
   </div>
+  <script src="/scripts/index.js"></script>
 </body>
 
 </html>
