--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         alt="Around the U.S. " />
     </header>
     <main class="content">
+      <!-- ----------------------------------------------------------------------- -->
+      <!--                                 PROFILE                                 -->
+      <!-- ----------------------------------------------------------------------- -->
       <section class="profile page__section">
         <img src="./images/Avatar.svg"
           alt="jacque"
@@ -30,6 +33,9 @@
         </div>
         <button class="profile__add-button"></button>
       </section>
+      <!-- ----------------------------------------------------------------------- -->
+      <!--                                  CARDS                                  -->
+      <!-- ----------------------------------------------------------------------- -->
       <section class="cards page__section">
         <ul class="cards__list">
           <li class="card">
@@ -89,10 +95,16 @@
         </ul>
       </section>
     </main>
+    <!-- ----------------------------------------------------------------------- -->
+    <!--                                 FOOTER                                  -->
+    <!-- ----------------------------------------------------------------------- -->
     <footer class="footer page__section">
       <p class="footer__title">© 2024 Around The U.S</p>
     </footer>
   </div>
+  <!-- ----------------------------------------------------------------------- -->
+  <!--                              MODAL SECTION                              -->
+  <!-- ----------------------------------------------------------------------- -->
   <div class="modal">
     <div class="modal__container">
       <button class="modal__close"></button>
