--- a/index.html
+++ b/index.html
@@ -111,12 +111,17 @@
       <button class="modal__close-button"></button>
       <p class="modal__title">Edit Profile</p>
       <form class="modal__form">
-        <input class="modal__input modal__input-line"
+        <input id="modal__form-title"
+          class="modal__input modal__input-line"
           type="text"
-          name="title">
-        <input class="modal__input modal__input-description"
+          name="name"
+          name="title"
+          placeholder='Title' />
+        <input id="modal__form-link"
+          class="modal__input modal__input-description"
           type="text"
-          name="description">
+          name="link"
+          placeholder="Image URL">
         <button class="modal__save-button">Save</button>
       </form>
     </div>
