--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
           class="profile__image" />
         <div class="profile__info">
           <h1 class="profile__title">Jacques Cousteau</h1>
-          <button class="profile__edit-button"></button>
+          <button class="profile__edit-button"
+            id="profile-edit-button"></button>
           <p class="profile__description">Explorer</p>
         </div>
         <button class="profile__add-button"></button>
@@ -106,23 +107,21 @@
   <!--                              MODAL SECTION                              -->
   <!-- ----------------------------------------------------------------------- -->
   <div class="modal"
-    id="edit-modal">
+    id="profile-edit-modal">
     <div class="modal__container">
       <button class="modal__close-button"></button>
-      <p class="modal__title">Edit Profile</p>
+      <h3 class="modal__title">Edit profile</h3>
       <form class="modal__form">
-        <input id="modal__form-title"
-          class="modal__input modal__input-line"
+        <input class="modal__input modal__input-line"
           type="text"
           name="name"
-          name="title"
-          placeholder='Title' />
-        <input id="modal__form-link"
-          class="modal__input modal__input-description"
+          placeholder="Name" />
+        <input class="modal__input modal__input-description"
           type="text"
-          name="link"
-          placeholder="Image URL">
-        <button class="modal__save-button">Save</button>
+          name="description"
+          placeholder="Description">
+        <button class="
+          modal__save-button">Save</button>
       </form>
     </div>
   </div>
