js update for title and description

--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
       <button class="modal__close-button"></button>
       <h3 class="modal__title">Edit profile</h3>
       <form class="modal__form">
-        <input class="modal__input profile__input-title"
+        <input class="modal__input profile__title-input"
           type="text"
           name="name"
           placeholder="Name" />
-        <input class="modal__input profile__input-description"
+        <input class="modal__input profile__description-input"
           type="text"
           name="description"
           placeholder="Description">
