css updates for page section and header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <div class="page__content">
     <header class="header page__section">
       <img src="./images/aroundus.svg"
-        alt="Around the U.S. " />
+        alt="Around the U.S. "
+        class="header__logo" />
     </header>
     <main class="content">
       <!-- ----------------------------------------------------------------------- -->
