--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
     </li>
   </template>
 
-  <script src="/scripts/index.js"></script>
+  <script src="./scripts/index.js"></script>
+
 </body>
 
 </html>
