--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <main class="content">
       <!-- Profile section -->
       <section class="profile page__section">
-        <img src="./images/Avatar.svg"
+        <img src="./images/usa.jpg"
           alt="Jacques Cousteau"
           class="profile__image" />
         <div class="profile__info">
-          <h1 class="profile__title">Jacques Cousteau</h1>
+          <h1 class="profile__title">USA</h1>
           <button class="profile__edit-button"
             id="profile-edit-button"></button>
-          <p class="profile__description">Explorer</p>
+          <p class="profile__description">Land of the Free</p>
         </div>
         <button class="profile__add-button"></button>
       </section>
