--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="content">
       <!-- Profile section -->
       <section class="profile page__section">
-        <img src="./images/usa.jpg"
+        <img src="./images/abe.jpg"
           alt="Jacques Cousteau"
           class="profile__image" />
         <div class="profile__info">
