trash icon and card info data stored

--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
       <img src=""
         alt=""
         class="card__image" />
+      <button class="card__trash-button"
+        type="button">
+        <img src="./images/Trash.svg"
+          alt="Trash-Button" />
+      </button>
       <div class="card__description">
         <h2 class="card__title"></h2>
         <button class="card__like-button"></button>
