trash works image preview needs attention

--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
       </form>
     </div>
   </div>
+  <!-- Preview Modal -->
+  <div class="modal"
+    id="preview-modal">
+    <div class="modal__container modal__container-transparent">
+      <button class="modal__close-button"></button>
+      <img src="#"
+        alt=""
+        class="modal__image"
+        id="modal-image" />
+      <p class="modal__text"></p>
+    </div>
+  </div>
   <!-- Card Template -->
   <template id="card-template">
     <li class="card">
@@ -88,10 +100,7 @@
         alt=""
         class="card__image" />
       <button class="card__trash-button"
-        type="button">
-        <img src="./images/Trash.svg"
-          alt="Trash-Button" />
-      </button>
+        type="button"></button>
       <div class="card__description">
         <h2 class="card__title"></h2>
         <button class="card__like-button"></button>
