updated text for css for preview

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         alt=""
         class="modal__image"
         id="modal-image" />
-      <p class="modal__text"></p>
+      <p class="modal__text"
+        id="modal-text"></p> <!-- Ensure the p tag has a unique id like modal-text -->
     </div>
   </div>
   <!-- Card Template -->
